# crushu-self-bot

./: README.md  main.py  pyproject.toml
