[tool.poetry]
name = "repl_python3_beta_vibes-premium"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.7.3"
gTTS = "^2.2.3"
aiohttp = "^3.7.4"
bs4 = "^0.0.1"
timedelta = "^2020.12.3"
django-content-toolkit = "^0.1.3"
js = "^1.0"
replit = "^3.2.4"
replitdb = "^0.0.15"
pymongo = "^3.12.1"
jdcloud-wsgi-wrapper = "^1.3"
pypresence = "^4.2.1"
ui = "^0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
